// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package chat33.comet;
option go_package = ".;grpc";

message Proto {
  int32 ver = 1;
  int32 op = 2;
  int32 seq = 3;
  int32 ack = 4;
  bytes body = 5;
}

enum Op {
  Undefined = 0;

  Auth = 1;
  AuthReply = 2;

  Heartbeat = 3;
  HeartbeatReply = 4;

  Disconnect = 5;
  DisconnectReply = 6;

  SendMsg = 7;
  SendMsgReply = 8;

  ReceiveMsg = 9;
  ReceiveMsgReply = 10;

  ProtoReady = 11;
  ProtoFinish = 12;

  Raw = 13;
}

// Proto 中 Op 为 OpAuth 时， body 必须可以反序列化为 AuthMsg
message AuthMsg {
  string appId = 1;
  string token = 2;
  bytes ext = 3; // 其它业务方可能需要的信息
}